# discord-watchdog

./: .env.example  .gitignore  Cargo.toml  Config.example.toml  README.md  rustfmt.toml
.github/workflows/: push.yaml  release.yaml
src/: commands.rs  lib.rs  main.rs  ping.rs  status.rs
src/commands/: config.rs  debug.rs  misc.rs  server.rs
