[package]
name = "discord_watchdog"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
fern = "0.7.1"
humantime = "2.2.0"
log = "0.4.27"
poise = "0.6.1"
serde = "1.0.219"
surge-ping = "0.8.2"
tokio = {version = "1.45.1", features = [
    "fs",
    "net",
    "rt-multi-thread"
]}
toml = "0.8.23"

[features]
# This feature is used while testing in the GitHub Actions. It disables tests that are using ICMP, because raw network access is prohibited.
ci = []

[profile.release]
opt-level = 3
lto = "fat"
